--- a/package.json
+++ b/package.json
@@ -29,15 +29,15 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^13.5.3",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.279.0",
-    "next": "13.4.19",
+    "next": "^13.5.3",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "query-string": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
     "tailwind-merge": "^1.14.0",
